Fix diagonal bottom border; fix subscribe form alignment on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -172,14 +172,15 @@ html, body {
 	margin-bottom: 50px;
 }
 
+#diagonal-column {
+	padding: 0;
+}
 
 #diagonal {
 	width: 100%;
+	display: block;
 }
 
-.contents-diagonal {
-	background: #f5f5f5;
-}
 
 /* ################### */
 /* KICKSTARTER SECTION */
@@ -499,8 +500,9 @@ button {
 		display: none;
 	}
 
-	/* fix subscribe button; center both on different
-	lines */
+	.email, #mc-embedded-subscribe {
+		clear: both;
+	}
 }
 
 /* foundation : small */
